kubernetes/jsdyb-k8s-001/apps/home/hajimari/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: &app hajimari
    app.kubernetes.io/instance: *app
    app.kubernetes.io/part-of: *app
  name: *app
  namespace: home
spec:
  hostnames:
  - portal.${EXTERNAL_DOMAIN}
  parentRefs:
  - kind: Gateway
    name: private-gateway
    namespace: gateway
  rules:
  - backendRefs:
    - kind: Service
      name: hajimari
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
